[package]
name = "http-to-s3"
version = "0.1.0"
authors = ["Sebastian <sb@pus.de>"]
description = "A small rust library that tries to efficiently move files from HTTP endpoints to S3"
edition = "2021"
license = "MIT"
repository = "https://github.com/St4NNi/http-to-s3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6"
async-stream = "0.3"
async-trait = "0.1"
aws-config = "0"
aws-sdk-s3 = "0"
aws-smithy-http = "0.45"
base64 = "0.13"
bytes = "1.1"
env_logger = "0"
futures = "0.3"
futures-channel = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hyper = {version = "0.14", features = ["full"]}
log = "0.4"
reqwest = {version = "0", features = ["stream"]}
tokio = {version = "1", features = ["full"]}
